Moves "return" link out of results table

--- a/data_explorer/templates/index.html
+++ b/data_explorer/templates/index.html
@@ -32,11 +32,16 @@
 {% endblock header_extension %}
 
 {% block body %}
-<div data-embed-jsx-app-here style="background-color: #fff; border-bottom-color: #c5d6de; margin-bottom: 8rem;">
+<div data-embed-jsx-app-here style="background-color: #fff; border-bottom-color: #c5d6de;">
   <div class="content">
     <noscript>
       Please enable JavaScript to use this page's functionality.
     </noscript>
   </div>
+</div>
+<div class="card__footer results-table_return-link">
+  <a href="#results-table">
+    Return to the top
+  </a>
 </div>
 {% endblock %}
