--- a/frontend/source/sass/components/_tables.scss
+++ b/frontend/source/sass/components/_tables.scss
@@ -124,7 +124,9 @@ table {
 }
 
 .results-table_return-link {
+  font-size: $medium-font-size;
   font-weight: $font-weight-bold;
+  padding-top: $space-2x;
   text-align: right;
 }
 
