Adds Schedule 736 price list analysis. Closes #2122

--- a/data_capture/templates/data_capture/analyze_price_list/step_3.html
+++ b/data_capture/templates/data_capture/analyze_price_list/step_3.html
@@ -39,23 +39,24 @@
     <table class="price-list-table analysis">
         <thead>
           <tr>
-            <th>Service proposed</th>
+            <th>Proposed service</th>
             <th>Min.<br />edu.</th>
             <th>Min.<br />exper.</th>
-            <th>Price</th>
+            <th># of results</th>
+            <th>Proposed<br />price</th>
             <th>Average</th>
             <th>+/- avg.</th>
             <th>% +/- avg.</th>
             <th>+/- std. dev.</th>
-            <th># of results</th>
           </tr>
         </thead>
         <tbody>
         {% for row in analyzed_rows %}
           <tr>
-            <td><a href={{ row.analysis.url }}>{{ row.labor_category }}</a></td>
+            <td>{{ row.labor_category }}</td>
             <td>{{ row.education_level }}</td>
             <td>{{ row.min_years_experience }}</td>
+            <td><a href={{ row.analysis.url }}>{{ row.analysis.count }}</a></td>
             <td class="number">${{ row.price|floatformat:2 }}</td>
             <td class="number">${{ row.analysis.avg|floatformat:2 }}</td>
             <td>
@@ -86,7 +87,6 @@
               {% endif %}
               {{ row.analysis.stddevs }} std. devs.
             </td>
-            <td>{{ row.analysis.count }}</td>
           </tr>
         {% endfor %}
         </tbody>
