Fixes return link (needed #), bumps up font

--- a/data_explorer/templates/index.html
+++ b/data_explorer/templates/index.html
@@ -39,7 +39,7 @@
     </noscript>
   </div>
 </div>
-<a href="results-table" class="results-table__return-link">
+<a href="#results-table" class="results-table__return-link">
   Return to the top
 </a>
 {% endblock %}
