--- a/frontend/source/sass/components/_tables.scss
+++ b/frontend/source/sass/components/_tables.scss
@@ -140,7 +140,7 @@ table {
 }
 
 .results-table__return-link {
-  font-size: $small-font-size;
+  font-size: $medium-font-size;
   font-weight: $font-weight-bold;
   display: inline-block;
   margin-top: $space-2x;
